# potential-spoon

./: .gitignore  CMakeLists.txt  COMMANDS.MD  README.md  main.cpp  network.cpp  run.job  test.cpp
atom/: CMakeLists.txt  Network.h  README.md  RobotNetwork.cpp  RobotNetwork.h  toolchain.cmake
atom/gcc/lib/: ld-linux.so.2
atom/mnist/: mnist_reader.hpp
config/: isk.json  params.json
networks/: LIFNetwork.cpp  LIFNetwork.h  Network.h
networks/outdated/: COMPlifnetwork.cpp  COMPlifnetwork.h
neurons/: LIFNeuron.cpp  LIFNeuron.h  neuron.cpp  test.cpp
optimizations/: CPUNetwork.cpp  CPUNetwork.h  opt1.cpp  opt1.h
plots/: 3dplot.gnu  create_images_from_weight.py  distribution.gnu  error_bars.gnu  exp_function.gnu  exp_plot.gnu  heatmap.gnu  hist.fct  histogram.gnu  image.gnu  max.py  neuron_potential.gnu  runtime_vs_spikes.gnu  sort.py  spike_count.gnu  spike_plot.gnu  spikeplot.gnu  stdp_function.gnu  trace_plot.gnu  voltage.gnu
synapses/: LIFNetwork.cpp  LIFNetwork.h  LIFNeuron.cpp  LIFNeuron.h  SPNet.cpp  brain_syn.cpp
test/: CImg_test.cpp  brian_example.py  vec_assign.cpp  vlines.py
weights/: classes.csv  thetas.csv  thetas59000.csv  weights.csv  weights59000.csv
